--- a/WK08.ipynb
+++ b/WK08.ipynb
@@ -121,7 +121,16 @@
         "# TODO: normalize and look at covariance matrix\n",
         "\n",
         "## 3. Normalize\n",
-        "# Since this is a new dataset, let's peek at its covariance matrix"
+        "scaler = StandardScaler().set_output(transform=\"pandas\")\n",
+        "\n",
+        "wines_scaled_df = scaler.fit_transform(wines_df)\n",
+        "\n",
+        "display(wines_scaled_df)\n",
+        "\n",
+        "# Since this is a new dataset, let's peek at its covariance matrix\n",
+        "display(wines_scaled_df.cov())\n",
+        "\n",
+        "display(wines_scaled_df.cov()[\"quality\"])"
       ]
     },
     {
@@ -184,9 +193,17 @@
         "# TODO: Create a linear model and run regression\n",
         "\n",
         "## 4. Separate the outcome variable and the independent variables\n",
+        "features = wines_scaled_df.drop(columns=[\"quality\"])\n",
+        "outcome = wines_df[\"quality\"]\n",
+        "\n",
         "## 5. Create a LinearRegression object\n",
+        "model = LinearRegression().fit(features, outcome)\n",
+        "\n",
         "## 6. Run the model on the training data\n",
-        "## 7. Measure error"
+        "pred_train = model.predict(features)\n",
+        "\n",
+        "## 7. Measure error\n",
+        "regression_error(outcome, pred_train)"
       ]
     },
     {
@@ -356,8 +373,47 @@
       "source": [
         "# 🍷🎉\n",
         "\n",
-        "Much better !\n",
+        "Much better !"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "### Look at Feature Importance\n",
         "\n",
+        "According to covariance and according to the model. This tells us which features are the most important when making predictions."
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "# according to the model\n",
+        "model_rf.feature_importances_"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "# With a bit of Python contortion to get the cov and importance values into DataFrames\n",
+        "\n",
+        "# Covariance\n",
+        "display(pd.DataFrame(wines_scaled_df.cov()[\"quality\"].drop(\"quality\").values.reshape(1,-1), columns=features.columns))\n",
+        "\n",
+        "# Feature Importance\n",
+        "display(pd.DataFrame(model_rf.feature_importances_.reshape(1, -1), columns=features.columns))"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
         "### Test Dataset\n",
         "\n",
         "One thing that we haven't been doing, but is an important step when training any kind of ML model, is to actually test our model on data that wasn't used in the training.\n",
