--- a/WK08.ipynb
+++ b/WK08.ipynb
@@ -732,12 +732,24 @@
         "## 4. Separate the outcome variable and the independent variables: DONE 🎉\n",
         "\n",
         "## 5. Create a new Classifier object\n",
+        "model_sgd = SGDClassifier().fit(features, outcome)\n",
+        "\n",
         "## 6. Run the model on the training data\n",
+        "pred_sgd_train = model_sgd.predict(features)\n",
         "\n",
         "## 7. Measure error\n",
+        "regression_error(outcome, pred_sgd_train)\n",
+        "\n",
         "## 7b. Look at prediction graphs\n",
+        "feat_list = [\"alcohol\", \"density\", \"chlorides\", \"volatility\"]\n",
+        "plot_preds(wines_df, pred_sgd_train, feat_list, \"quality\")\n",
+        "\n",
         "## 8. Look at Confusion Matrices\n",
-        "## 8b. Print scores"
+        "display_confusion_matrix(outcome, pred_sgd_train, display_labels)\n",
+        "\n",
+        "## 8b. Print scores\n",
+        "print(\"Train\")\n",
+        "print_classification_scores(wines_df[\"quality\"], pred_sgd_train)\n"
       ]
     },
     {
@@ -749,10 +761,21 @@
         "# TODO: Repeat for test data\n",
         "\n",
         "## 6. Run the model on the test data\n",
+        "pred_sgd_test = model_sgd.predict(features_test)\n",
+        "\n",
         "## 7. Measure error\n",
+        "regression_error(wines_test_df[\"quality\"], pred_sgd_test)\n",
+        "\n",
         "## 7b. Look at graphs\n",
+        "feat_list = [\"alcohol\", \"density\", \"chlorides\", \"volatility\"]\n",
+        "plot_preds(wines_test_df, pred_sgd_test, feat_list, \"quality\")\n",
+        "\n",
         "## 8. Look at Confusion Matrices\n",
-        "## 8b. Print scores"
+        "display_confusion_matrix(wines_test_df[\"quality\"], pred_sgd_test, display_labels)\n",
+        "\n",
+        "## 8b. Print scores\n",
+        "print(\"Train\")\n",
+        "print_classification_scores(wines_test_df[\"quality\"], pred_sgd_test)"
       ]
     },
     {
@@ -765,8 +788,37 @@
         "\n",
         "With this strategy, our fitted model actually gives us extra information about our data and how it gets classified.\n",
         "\n",
-        "Instead of just using `predict()` to get the resulting classes of a dataset, we can use `predict_proba()` to get statistical likelihoods for each of our datapoints and see how likely they are to be in each of the possible classes.\n",
+        "Instead of just using `predict()` to get the resulting classes of a dataset, we can use `predict_proba()` to get statistical likelihoods for each of our datapoints and see how likely they are to be in each of the possible classes."
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "# TODO: re-train a Logistic Regression model, or change code above to use LogisticRegression object\n",
         "\n",
+        "model_lr = LogisticRegression(max_iter=256).fit(features, outcome)\n",
+        "\n",
+        "## 6. Run the model on the training data\n",
+        "pred_lr_train = model_lr.predict(features)\n",
+        "\n",
+        "## 6. Run the model on the test data\n",
+        "pred_lr_test = model_lr.predict(features_test)\n",
+        "\n",
+        "## 7. Measure error\n",
+        "print(\"Train\")\n",
+        "print(regression_error(outcome, pred_lr_train))\n",
+        "\n",
+        "print(\"\\nTest\")\n",
+        "print(regression_error(wines_test_df[\"quality\"], pred_lr_test))"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
         "Here are the class predictions for the first $6$ items in our dataset:"
       ]
     },
@@ -776,16 +828,7 @@
       "metadata": {},
       "outputs": [],
       "source": [
-        "# TODO: re-train a Logistic Regression model, or change code above to use LogisticRegression object"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": null,
-      "metadata": {},
-      "outputs": [],
-      "source": [
-        "model_log.predict(features[:6])"
+        "model_lr.predict(features[:6])"
       ]
     },
     {
@@ -802,7 +845,7 @@
       "outputs": [],
       "source": [
         "# get probabilities, round and scale to percentage\n",
-        "like_proba = model_log.predict_proba(features[:6].values).round(3) * 100\n",
+        "like_proba = model_lr.predict_proba(features[:6]).round(3) * 100\n",
         "\n",
         "# put in dataframe\n",
         "col_names = [f\"quality {i} likelihood (%)\" for i in range(3,10)]\n",
